--- a/style.css
+++ b/style.css
@@ -37,7 +37,12 @@ body{
     margin-bottom:18px;
 
 }
+h1{
 
+    font-family:"Montserrat";
+    font-style:normal;
+    font-size:45px;
+}
 h2{
 
     font-size:35px;
