--- a/style.css
+++ b/style.css
@@ -35,6 +35,10 @@ body{
 .my-profetion{
 
     margin-bottom:18px;
+    
+    font-family:"Montserrat", sant-setif;
+    
+    font-size:14px;
 
 }
 h1{
