--- a/style.css
+++ b/style.css
@@ -64,3 +64,8 @@ h2{
     color: #595959;
     font-family:"Montserrat", sant-setif;
 }
+
+h3{ 
+    font-size:22px;
+    font-family:"Montserrat", sant-setif;
+}
