--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ h2{
 
 .project-items{
 
-    background-color: yellow;
+  
 
 }
 
@@ -67,4 +67,9 @@ h2{
 h3{ 
     font-size:22px;
     font-family:"Montserrat", sant-setif;
+}
+
+.mis{
+    font-size:12px;
+    color:#A8A8A8;
 }
