--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
 
      margin:0 auto;
     
-    box-shadow:0 4px 4px 0;
+     box-shadow:0 4px 4px rgda(0, 0, 0, 0.25);
 }
 
 /*Main content*/
