--- a/style.css
+++ b/style.css
@@ -93,11 +93,6 @@ aside li{
     color:161D2A;
 }
 
-
-.contac{
-    color:#161D2A;
-}
-
 tel{
     color:#161D2A;
 }
@@ -118,4 +113,8 @@ li{
 
 .my-proto{
   margin-top:40px;
+}
+
+.contact-conteiner{
+    
 }
