--- a/style.css
+++ b/style.css
@@ -115,6 +115,11 @@ li{
   margin-top:40px;
 }
 
-.contact-conteiner{
-    
+.contact-conteiner, 
+.tech-skills-container{
+    margin:48px 0 0 40px;
 }
+
+.siddar-title{
+}
+
