--- a/style.css
+++ b/style.css
@@ -133,3 +133,18 @@ li{
 contact-item{
     margin:0;
 }
+.contacts-number{
+    font-style:normal;
+    font-weight:400px;
+    font-size:14px;
+    line-height:24px;
+    color:161D2A;
+}
+
+.contact-email{
+    font-style:normal;
+    font-weight:400px;
+    font-size:14px;
+    line-height:24px;
+    color:#2979FF;
+}
