--- a/style.css
+++ b/style.css
@@ -150,8 +150,14 @@ contact-item{
     color:#2979FF;
 }
 
+/*Skills*/
+
 .skils-list{
    margin:0px;
    padding:0 0 0 12px; 
     
+}
+
+.skills-list-item{
+    color:#6D98F5;
 }
