--- a/style.css
+++ b/style.css
@@ -161,3 +161,10 @@ contact-item{
 .skills-list-item{
     color:#6D98F5;
 }
+
+.skills-list-text{
+    font-style:normal;
+    font-weight:400px;
+    line-height:24px;
+    color:#161D2A;
+}
