--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ contact-item{
     font-weight:400px;
     font-size:14px;
     line-height:24px;
-    color:161D2A;
+    color:#161D2A;
 }
 
 .contact-email{
