--- a/style.css
+++ b/style.css
@@ -109,7 +109,8 @@ li{
 }
 
 .contacts-container, 
-.tech-skills-container{
+.tech-skills-container,
+.soft-skills-container{
     margin:48px 0 0 40px;
 }
 
