--- a/style.css
+++ b/style.css
@@ -55,10 +55,11 @@ body{
     margin:0 0 28px 0;
 }
 
-h2{
-
-    font-size:35px;
-
+{
+    font-style:normal;
+    font-size:14px;
+    line-height:24px;
+    color:#595959;
 }
 
 .{
