--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ about-me-container{
     font-size:22px;
     line-height:27px;
     color:#000000;
-    margin:0px;
+    margin:0 0 8px 0;
  }
 
 .lorem-ipsem{
