--- a/style.css
+++ b/style.css
@@ -76,10 +76,12 @@ about-me-container{
     margin:0 0 8px 0;
  }
 
-{font-style:normal;
-font-weight:700px;
-font-size:14px;
-line-height:24px;
+.project-items{
+    font-style:normal;
+    font-weight:700px;
+    font-size:14px;
+    line-height:24px;
+    color:#000000;
 }
 .lorem-ipsem{
     font-size:14px;
