--- a/style.css
+++ b/style.css
@@ -94,6 +94,15 @@ project-list{
 .projects-conteiner{
     margin-bottom:48px;
 }
+
+{
+font-style:normal;
+font-weight:400px;
+font-size:14px;
+line-height:24px;
+color:#595959;
+}
+
 .lorem-ipsem{
     font-size:14px;
     color: #595959;
