--- a/style.css
+++ b/style.css
@@ -126,9 +126,9 @@ color:#595959;
     color:#000000;
     margin:0px;
 }
-h3{ 
-    font-size:22px;
-    font-family:"Montserrat", sant-setif;
+
+.work-ecxperience-place{
+   margin-bottom:16px; 
 }
 
 .mis{
