--- a/style.css
+++ b/style.css
@@ -131,16 +131,16 @@ color:#595959;
    margin-bottom:16px; 
 }
 
+.work-ecxperience-company{
+   color:#6D9BF5 
+}
+
 .mis{
     font-size:12px;
     color:#A8A8A8;
 }
 h4{ 
     font-size:16px;
-}
-
-span{
-  color:#6D9BF5;
 }
 
 .experience li{
