--- a/style.css
+++ b/style.css
@@ -135,9 +135,13 @@ color:#595959;
    color:#6D9BF5 
 }
 
-.mis{
+.work-period{
+    font-style:normal;
+    font-weight:400;
+    line-height:15px;
     font-size:12px;
     color:#A8A8A8;
+    margin:12px 0 8px 0;
 }
 h4{ 
     font-size:16px;
