--- a/style.css
+++ b/style.css
@@ -143,6 +143,14 @@ color:#595959;
     color:#A8A8A8;
     margin:12px 0 8px 0;
 }
+
+{
+    font-style:normal;
+    font-weight:400;
+    font-size:14px;
+    line-height:24px;
+    color:#595959;
+}
 h4{ 
     font-size:16px;
 }
