--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ color:#595959;
     margin:12px 0 8px 0;
 }
 
-{
+.work-duties{
     font-style:normal;
     font-weight:400;
     font-size:14px;
