--- a/style.css
+++ b/style.css
@@ -151,8 +151,10 @@ color:#595959;
     line-height:24px;
     color:#595959;
 }
-h4{ 
-    font-size:16px;
+
+.work-duties-list{
+    padding:0 0 0 14px;
+    margin:0;
 }
 
 .experience li{
